fixed tag overflow

--- a/assets/css/shapes.css
+++ b/assets/css/shapes.css
@@ -427,6 +427,9 @@ body {
     border-top-right-radius: 1.5rem;
 
     & .post-body__footer {
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+
         &::after {
             border-bottom-right-radius: 1rem;
         }
@@ -478,6 +481,10 @@ body.is-chromium {
         corner-shape: squircle;
 
         & .post-body__footer {
+            border-bottom-left-radius: 2rem;
+            border-bottom-right-radius: 2rem;
+            corner-shape: squircle;
+            
             &::after {
                 border-bottom-right-radius: 2rem;
                 corner-shape: squircle;
